# lattice

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.cpp
CUDA/: lattice_abi.h  lattice_smoke.cu  tensor_elemwise_add.cu  tensor_lu.cu  tensor_matmul.cu  tensor_regression.cu  tensor_solve.cu  tensor_svd.cu  tensor_transpose.cu
HIP/: lattice_abi.h  lattice_elemwise.inc  lattice_kernel_common.h  lattice_reduce.inc  tensor_conv2d.hip  tensor_correlation.hip  tensor_elemwise_div.hip  tensor_elemwise_mul.hip  tensor_fft1d.hip  tensor_max_pool2d.hip  tensor_qr.hip  tensor_quantile.hip  tensor_reduce_mean.hip  tensor_reduce_std.hip  tensor_reduce_sum.hip
Metal/: lattice_abi.h  lattice_elemwise.inc  lattice_kernel_common.h  lattice_reduce.inc  lattice_smoke.metal  tensor_conv2d.metal  tensor_correlation.metal  tensor_elemwise_add.metal  tensor_elemwise_div.metal  tensor_elemwise_mul.metal  tensor_elemwise_sub.metal  tensor_fft1d.metal  tensor_lu.metal  tensor_matmul.metal  tensor_max_pool2d.metal  tensor_qr.metal  tensor_quantile.metal  tensor_reduce_mean.metal  tensor_reduce_std.metal  tensor_reduce_sum.metal  tensor_reduce_var.metal  tensor_regression.metal  tensor_solve.metal  tensor_svd.metal  tensor_transpose.metal
OpenCL/: lattice_abi.h  lattice_elemwise.inc  lattice_kernel_common.h  lattice_reduce.inc  lattice_smoke.cl  tensor_conv2d.cl  tensor_correlation.cl  tensor_elemwise_sub.cl  tensor_fft1d.cl  tensor_lu.cl  tensor_matmul.cl  tensor_max_pool2d.cl  tensor_qr.cl  tensor_quantile.cl  tensor_reduce_var.cl  tensor_regression.cl  tensor_solve.cl  tensor_svd.cl  tensor_transpose.cl
docs/: BACKEND.md  GOALS.md  GRAMMAR.md  OVERVIEW.md  SEMANTICS.md  TYPE_SYSTEM.md
examples/: basics.lat  functions.lat  numerics.lat  records.lat  tensors.lat  tuples.lat
include/builtin/: builtins.h
include/lexer/: lexer.h  token.h
include/parser/: ast.h  parser.h
include/repl/: repl.h
include/runtime/: backend.h  decimal.h  dtype.h  environment.h  ops.h  runner.h  tensor_gpu.h  tensor_utils.h  type_checker.h  value.h
include/runtime/backends/: backend_error.h  backend_log.h  cache_store.h  cuda_abi.h  cuda_backend.h  device_caps.h  device_quirks.h  device_selector.h  hip_abi.h  hip_backend.h  memory_pool.h  metal_abi.h  metal_backend.h  opencl_abi.h  opencl_backend.h
include/runtime/backends/gpu/: cuda_loader.h  dynloader.h  hip_loader.h  opencl_loader.h
include/util/: error.h  string.h
src/builtin/: builtins.cpp
src/lexer/: lexer.cpp
src/parser/: parser.cpp
src/repl/: repl.cpp
src/runtime/: decimal.cpp  ops.cpp  runner.cpp  tensor_gpu.cpp  tensor_utils.cpp  type_checker.cpp
src/runtime/backends/: backend_error.cpp  backend_log.cpp  cache_store.cpp  device_quirks.cpp  device_selector.cpp  memory_pool.cpp
src/runtime/backends/cpu/: backend.cpp
src/runtime/backends/gpu/: cuda_backend.cpp  cuda_loader.cpp  dynloader.cpp  hip_backend.cpp  hip_loader.cpp  metal_backend.mm  metal_backend_stub.cpp  opencl_backend.cpp  opencl_loader.cpp
tests/: main.cpp  test_util.cpp  test_util.h
tests/builtin/: builtin_tests.cpp  print_tests.cpp
tests/interpreter/: interpreter_tests.cpp
tests/lexer/: lexer_tests.cpp
tests/parser/: parser_tests.cpp
tests/repl/: repl_tests.cpp
tests/runtime/: abi_tests.cpp  backend_edge_tests.cpp  backend_error_tests.cpp  backend_log_tests.cpp  backend_tests.cpp  cache_store_tests.cpp  complex_tests.cpp  decimal_rational_tests.cpp  destructuring_tests.cpp  device_quirks_tests.cpp  device_selector_tests.cpp  error_location_tests.cpp  integration_tests.cpp  memory_pool_tests.cpp  promotion_tests.cpp  runtime_tests.cpp  tensor_tests.cpp  tuple_record_tests.cpp  type_checker_tests.cpp
tests/util/: util_tests.cpp
